--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,96 +1,98 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
 
 .footer-container {
-    background-color: #0f0f0f;
-    margin-top: 80px;
-    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+  background-color: #0f0f0f;
+  margin-top: 80px;
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px,
+    rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px,
+    rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
 }
 
 #footer-icon {
-    height: 26px;
-    width: 26px;
+  height: 26px;
+  width: 26px;
 }
 
-.footer-row > h1{
-    padding-bottom: 20px;
-    color: #1DDDBC;
+.footer-row > h1 {
+  padding-bottom: 20px;
+  color: #1dddbc;
 }
 
 .footer-span {
-    padding-left: 5px;
-    color: #01B9FF;
-    font-size: 20px;
-    transition: 0.3s;
+  padding-left: 5px;
+  color: #01b9ff;
+  font-size: 20px;
+  transition: 0.3s;
 }
 
 .footer-span:hover {
-    padding-left: 15px;
+  padding-left: 15px;
 }
 
 .contact-text {
-    text-decoration: none;
-    color: white;
-    font-size: 20px;
-    transition: 0.3s;
-    padding-bottom: 10px;
+  text-decoration: none;
+  color: white;
+  font-size: 20px;
+  transition: 0.3s;
+  padding-bottom: 10px;
 }
 
 .contact-text:hover {
-    color: #01B9FF;
-    padding-left: 15px;
+  color: #01b9ff;
+  padding-left: 15px;
 }
 
 .row-paragraph {
-    font-size: 19px;
+  font-size: 19px;
 }
 
 .contact-info > li {
-    padding-bottom: 6px;
+  padding-bottom: 6px;
 }
 
 .page-end {
-    text-align: center;
-    border-top: 1px solid #01B9FF;
-    font-family: 'Roboto', sans-serif;
-    padding-top: 13px;
+  text-align: center;
+  border-top: 1px solid #01b9ff;
+  font-family: "Roboto", sans-serif;
+  padding-top: 13px;
 }
 
 .page-end-statement {
-    font-size: 22px;
+  font-size: 22px;
 }
 
-#page-end-name{
-color: #1DDDBC;
+#page-end-name {
+  color: #1dddbc;
 }
 
 .contact-info {
-    padding-left: 0rem !important;
+  padding-left: 0rem !important;
 }
 
 .col-header {
-    color: #1DDDBC;
+  color: #1dddbc;
 }
 
 #socials-footer {
-    display: flex;
-    gap: 25px;
-    padding-left: 0rem !important;
-    margin-top: 20px;
+  display: flex;
+  gap: 25px;
+  padding-left: 0rem !important;
+  margin-top: 20px;
 }
 
 #socials-footer li a {
-    text-decoration: none;
-    color: white;
-    background-color: #0037ec;
-    border: none;
-    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-    transition: 0.3s;
-    display: grid;
-    font-size: 23px;
-    border-radius: 50%;
-    padding: 10px;
+  text-decoration: none;
+  color: white;
+  background-color: #0037ec;
+  border: none;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  transition: 0.3s;
+  display: grid;
+  font-size: 23px;
+  border-radius: 50%;
+  padding: 10px;
 }
 
-#socials-footer li a:hover { 
-background-color: #002cbe;
+#socials-footer li a:hover {
+  background-color: #002cbe;
 }
